[workspace]
resolver = "2"
members = [
    "transpiler/torchc",
    "transpiler/torchc_diagnosis",
    "transpiler/torchc_lex",
    "transpiler/torchc_lits",
    "transpiler/torchc_parse",
    "transpiler/torchc_script",
    "transpiler/torchc_hike",
    "transpiler/torchc_cgen",
    "transpiler/torchc_cli",
]
