[package]
name = "torchc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
colored = "2.1.0"
torchc_lits = { path = "../torchc_lits" }
torchc_script = { path = "../torchc_script" }
torchc_parse = { path = "../torchc_parse" }
torchc_diagnosis = { path = "../torchc_diagnosis" }
torchc_lex = { path = "../torchc_lex" }
