[package]
name = "torchc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "torch"
path = "src/main.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
torchc_lits = { path = "../torchc_lits" }
torchc_script = { path = "../torchc_script" }
torchc_parse = { path = "../torchc_parse" }
torchc_diagnosis = { path = "../torchc_diagnosis" }
torchc_hike = { path = "../torchc_hike" }
torchc_cgen = { path = "../torchc_cgen" }
torchc_cli = { path = "../torchc_cli" }
colored = "2.1.0"
