[package]
name = "torchc_parse"
version = "0.1.0"
edition = "2021"

[dependencies]
torchc_script = { path = "../torchc_script" }
torchc_diagnosis = { path = "../torchc_diagnosis" }
torchc_lex = { path = "../torchc_lex" }
torchc_cgen = { path = "../torchc_cgen" }
torchc_lits = { path = "../torchc_lits" }
colored = "2.1.0"
